--- a/nccl-sys/Cargo.toml
+++ b/nccl-sys/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
-name = "nccl-rs"
+name = "nccl-sys"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tch = "0.8"
-nccl-sys = { path = "nccl-sys" }
+
+[build-dependencies]
+bindgen = "0.60.1"
+
+[dev-dependencies]
 thiserror = "1.0"
-
-[workspace]
-members = ["nccl-sys"]
-
