--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tch = { path = "../tch-rs" }
+tch = { git = "https://github.com/LaurentMazare/tch-rs" }
 nccl-sys = { path = "nccl-sys" }
 thiserror = "1.0"
 
